--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ Other_dataset/Medicare-Physician-and-Other-Supplier-PUF.zip
 Other_dataset/Inpatient_Data_2016_CSV.zip
 Other_dataset/BCHI-dataset_2019-03-04.csv
 Other_dataset/BCHC_Data_Inventory-Percent of Adults Who Binge Drank_records.csv
+.Rproj.user
